Kubernetes/Network-policy/pod-b.yml
apiVersion: v1
kind: Pod
metadata:
   name: pod-b
   labels:
     app: web
spec:
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
