Kubernetes/Network-policy/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
   name: test-pod
spec:
  containers:
    - name: echo-server
      image: landrzejewski/echo-server:v1
      ports:
        - containerPort: 8080
