Kubernetes/Network-policy/dev-prod.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    env: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: production
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-prod
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - ports:
        - port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              env: production
  egress:
    - to:
         - podSelector:
             matchLabels:
               app: web
