Kubernetes/Network-policy/limit-to-app.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limit-to-app
spec:
  podSelector:
    matchLabels:
      app: web
  ingress: # {} allow traffic from all sources
    - from:
        - podSelector:
            matchLabels:
              app: web
